# terra-engine

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  ROADMAP.md  fly.toml  pyproject.toml  requirements.txt  simulation.html  terra_node_state.json
.github/workflows/: ci.yml  release.yml
.mypy_cache/3.10/: cache.0.db-journal
data/: aquaculture_sample.csv
deploy/: README.md  firstboot.sh  terra-node.service
deploy/image/: README.md  motd  setup-branding.sh
docs/: CALIBRATION.md  HARDWARE.md  SECURITY-REVIEW.md  SYSTEMSPEC.md  VALIDATION.md  WALKTHROUGH.md  sidebar-backgrounds.md
scripts/: build_sim_site.py  coverage.sh  make_sample_csv.py  run_calibrate.py  run_close_loop.py  run_csv.py  run_demo.py  verify.py
terra/: __init__.py  accounts.py  alerts.py  audit.py  baselines.py  billing.py  cli.py  control.py  core.py  diagnostics.py  ingest.py  mailer.py  registry.py  reports.py  server.py  support.py  ukf.py  validate.py
terra/calibrate/: __init__.py  nuts.py  spec.py
terra/domains/: aquaculture.py  bioremediation.py  blss.py  soil.py
terra/node/: __init__.py  actuator.py  hardware.py  report.py  runner.py  selftest.py
terra/web/: docs.html  index.html  landing.html  order.html  pricing.html  privacy.html  support.html  terms.html
terra/web/assets/: README.md
terra_engine-0.4.0/: LICENSE  README.md  pyproject.toml
terra_engine-0.4.0/terra/: __init__.py  cli.py  core.py  engine.py  model.py  simulate.py
terra_engine-0.4.0/terra/calibrate/: jax_models.py  models.py  nuts.py
terra_engine-0.4.0/terra/domains/: __init__.py  aquaculture.py  soil.py
terra_engine-0.4.0/terra/node/: __init__.py  driver.py
terra_engine-0.4.0/tests/: test_cli.py  test_node.py  test_validate.py
tests/: test_authcomplete.py  test_calibrate.py  test_control.py  test_diagnostics.py  test_engine.py  test_gating.py  test_handoff.py  test_ingest.py  test_mailer.py  test_node.py  test_platform.py  test_reports_audit.py  test_robust.py  test_roles.py  test_security.py  test_server_auth.py
