[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "terra-engine"
version = "0.2.0"
description = "One Bayesian inference engine for every closed biogeochemical loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Terra Laboratories" }]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
plots = ["matplotlib>=3.6"]
calibrate = ["jax>=0.4.20", "numpyro>=0.13"]

[project.scripts]
terra = "terra.cli:main"

[tool.setuptools.packages.find]
include = ["terra*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
# stylistic rules the codebase intentionally uses (compact one-liners, lambdas)
ignore = ["E501", "E701", "E702", "E731", "E741", "E722"]
