[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "terra-engine"
dynamic = ["version"]
description = "One Bayesian inference engine for every closed biogeochemical loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cameron Souza" }, { name = "Terra Laboratories" }]
keywords = [
  "bayesian", "state-estimation", "kalman-filter", "biogeochemistry",
  "aquaculture", "bioremediation", "life-support", "edge",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.23"]

[project.urls]
Homepage = "https://terralaboratories.com"
Repository = "https://github.com/CamSouza13/terra-engine"

[project.optional-dependencies]
plots = ["matplotlib>=3.6"]
calibrate = ["jax>=0.4.20", "numpyro>=0.13"]
dev = ["ruff", "mypy", "coverage", "build"]

[project.scripts]
terra = "terra.cli:main"

[tool.setuptools.packages.find]
include = ["terra*"]

[tool.setuptools.dynamic]
version = { attr = "terra.__version__" }

[tool.setuptools.package-data]
terra = ["web/*.html", "web/assets/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
# stylistic rules the codebase intentionally uses (compact one-liners, lambdas)
ignore = ["E501", "E701", "E702", "E731", "E741", "E722"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true    # numpy/jax/numpyro have partial or no stubs
check_untyped_defs = false       # the codebase is intentionally lightly typed
warn_redundant_casts = true
no_implicit_optional = false
exclude = ["build/", "dist/"]

[tool.coverage.run]
source = ["terra"]
omit = ["terra/calibrate/*"]     # jax layer isn't exercised in the numpy suite

[tool.coverage.report]
show_missing = false
fail_under = 70
